--- a/Fan/Views/Home/About.cshtml
+++ b/Fan/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>It's not about me, it's about Rick</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Astley was born on 6 February 1966 in Newton-le-Willows in Lancashire, the fourth child of his family. His parents divorced when he was five, and Astley was brought up by his father.[9] His musical career started when he was ten, singing in the local church choir.[10] During his schooldays, Astley formed and played the drums in a number of local bands, where he met guitarist David Morris.[2][11] After leaving school at sixteen, Astley was employed during the day as a driver in his father's market-gardening business and played drums on the Northern club circuit at night in bands such as Give Way – specialising in covering Beatles and Shadows songs – and FBI, which won several local talent competitions.</p>
+<p>His first single was the little-known "When You Gonna", released as a collaboration with Lisa Carter, with little promotion. It did not chart. His first solo offering was "Never Gonna Give You Up", recorded on New Year's Day 1987, and released eight months later, in August.[13] Astley's distinctive rich, deep voice combined with dance-pop, made the song an immediate success,[14] spending five weeks at the top of the British charts and becoming the year's highest-selling single. The song was also a worldwide number one hit, topping the charts in 24 other countries, including the U.S., Australia, and Germany. It would become the first of 13 (worldwide) top 30 hit singles for him. "Never Gonna Give You Up" won Best British single at the 1988 BPI awards (now called the BRIT Awards),[15] and he performed the hit in front of a global audience of 100 million.[2][16]</p>
+All info taken from Wikipedia.
